# Antlr4-SystemVerilog-Parser

./: .gitignore  .gitmodules  CMakeLists.txt  ModuleSimulator.hpp  ModuleVisitor.hpp  Register.hpp  SV.g4  Signal.hpp  design.sv  generate_parser.sh  sim_main.cpp
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  ModuleVisitor.hpp
src/core/: CMakeLists.txt  Signal.hpp
src/sim_main/: CMakeLists.txt
src/simulator/: CMakeLists.txt  ModuleSimulator.cpp  ModuleSimulator.hpp  SimulationState.cpp  SimulationState.hpp
